@@ -4323,6 +4323,8 @@ for-value   NIL or T
                  `(c-error-c
                    (ENGLISH "Missing &REST parameter in lambda list ~S")
                    lambdalist))
+               (push-opt (v i s)
+                 `(progn (push ,v optvar) (push ,i optinit) (push ,s optsvar)))
                (skip-L (items)
                  `(loop
                    (when (atom L) (return))
@@ -4353,22 +4355,16 @@ for-value   NIL or T
             (if (symbolp item)
               (if (memq item lambda-list-keywords)
                 (check-item item '(&rest &key &aux))
-                (progn (push item optvar) (push nil optinit) (push 0 optsvar)))
+                (push-opt item nil 0))
               (if (and (consp item) (symbolp (car item)))
                 (if (null (cdr item))
-                  (progn (push (car item) optvar)
-                         (push nil optinit)
-                         (push 0 optsvar))
+                  (push-opt (car item) nil 0)
                   (if (consp (cdr item))
                     (if (null (cddr item))
-                      (progn (push (car item) optvar)
-                             (push (cadr item) optinit)
-                             (push 0 optsvar))
+                      (push-opt (car item) (cadr item) 0)
                       (if (and (consp (cddr item)) (symbolp (caddr item))
                                (null (cdddr item)))
-                        (progn (push (car item) optvar)
-                               (push (cadr item) optinit)
-                               (push (caddr item) optsvar))
+                        (push-opt (car item) (cadr item) (caddr item))
                         (lambdalist-error item)))
                     (lambdalist-error item)))
                 (lambdalist-error item))))
